index.css
* {
    font-family: "Poiret One", sans-serif;
    margin: 0;
}

html {
    scroll-behavior: smooth;
  }

.section {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;

  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border-bottom: 1rem solid darkred;
  height: 100vh;
}

.section#hot {
  background-image: url("assets/hot.jpg");
}

.section#juicy {
  background-image: url("assets/juicy.jpg");
}

.section#cosy {
  background-image: url("assets/cosy.jpg");
  border-bottom: none;
}

.section .header {
  color: darkred;
  font-family: "Spirax", sans-serif;
  font-size: 5rem;
}

.section .box {
  color: whitesmoke;
  font-size: 1.2rem;
  padding: 1rem 2rem;
  width: 500px;
}

.section .box.red {
  background-color: rgba(139, 0, 0, 0.8);
  position: relative;
  text-align: center;
}

.section .box.red.first {
  right: 5rem;
}

.section .box.red.second {
  left: 5rem;
}

.section .box.black {
  background-color: rgba(0, 0, 0, 0.8);
}

.section .box.black .row {
  display: flex;
  justify-content: space-between;
}
.container {
    background-color: rgba(0, 0, 0, 0.5); 
    height: 100%;
    padding-top: 30px;
}

 nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
    background-color: #333;
} 

nav ul li {
    margin: 15px;
}

nav ul li a {
    text-decoration: none;
    color: white;
    font-size: 1.5em;
}
.navbar {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000;
} 
 
.navbar li a:hover {
    background-color: #111;
}

.content h1 {
    font-size: 3em;
    color: red;
    font-family: "Spirax", sans-serif;
}

  .row {
    display: flex;
    text-align: center;
    padding: 10px;
  }

